<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".views.ConfirmInfoActivity">

    <LinearLayout
        android:id="@+id/ll_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_payment_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay" />

        <TextView
            android:id="@+id/tv_payment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_greeting"
            android:text="N/A"
            android:textSize="@dimen/acc_name_text_size"
            android:textStyle="bold" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/tv_account_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_acc_holder_name" />

        <TextView
            android:id="@+id/tv_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_greeting"
            android:text="N/A"
            android:textSize="@dimen/acc_name_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <TextView
            android:id="@+id/tv_account_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_num" />

        <TextView
            android:id="@+id/tv_account_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_greeting"
            android:text="N/A"
            android:textSize="@dimen/acc_name_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <TextView
            android:id="@+id/tv_at_bank_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_bank" />

        <TextView
            android:id="@+id/tv_at_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_greeting"
            android:text="N/A"
            android:textSize="@dimen/acc_name_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>

</RelativeLayout>
